used axios with GET request and component function to build markup and append to main container in html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./index.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script defer src="./GitHubCard/index.js"></script>
   </head>
   <body>
     <div class="container">
@@ -12,10 +14,11 @@
         <p>❤️'s</p>
         <img src="./assets/githublogo.png" alt="GitHub Logo" />
       </div>
-      <div class="cards"></div>
+      <div class="cards">
+        <!-- Here is where the cards will be appended -->
+      </div>
     </div>
     <!-- TODO: add Axios CDN here (Or install Axios with npm instead!) -->
-    <script src="./GitHubCard/index.js"></script>
   </body>
 </html>
 <!-- Do NOT change anything here except TODO line -->
